<resources>
    <string name="app_name">Pengaduan</string>
    <string name="action_settings">Settings</string>
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>
    <string name="pesan_aduan">Pesan Aduan</string>
    <string name="lokasi">Objek Lokasi</string>
    <string name="kategori">Kategori</string>

    <!-- Firebase messages -->
    <string name="auth_faileds">Failed to Authenticate</string>
    <string name="auth_success">Authentication Success</string>

    <!-- photo types -->
    <string name="new_photo">new_photo</string>
    <string name="profile_photo">profile_photo</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="dbname_user_account_settings">user_account_settings</string>
    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>
    <string name="dbname_following">following</string>
    <string name="dbname_followers">followers</string>
    <string name="dbname_stories">stories</string>

    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <string name="field_user_id">user_id</string>
    <string name="field_likes">likes</string>
    <string name="field_caption">caption</string>
    <string name="field_date_created">date_created</string>
    <string name="field_photo_id">photo_id</string>
    <string name="field_tags">tags</string>
    <string name="field_image_path">image_path</string>
    <string name="field_comments">comments</string>
    <string name="field_comment">comment</string>
    <string name="field_image_uri">image_uri</string>
    <string name="field_video_uri">video_uri</string>
    <string name="field_story_id">story_id</string>
    <string name="field_views">views</string>
    <string name="field_duration">duration</string>
    <string name="field_profile_photo">profile_photo</string>
    <string name="field_timestamp">timestamp</string>
    <string name="music">Home</string>
    <string name="favor">Profile</string>

    <string name="transition_pantau_morph" translatable="false">pantau_morph</string>
    <string name="bangunan">Bangunan</string>
    <string name="jalanan">Jalanan</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="title_activity_maps">Map</string>

</resources>