<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".ui.DialogKategori">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:transitionName="@string/transition_pantau_morph">

        <LinearLayout
            android:id="@+id/ll_kategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical">

            <com.pixplicity.fontview.FontAppCompatTextView
                style="@style/FontTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/list"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="32dp"
                android:text="Pilih Kategori"
                android:textColor="#000"
                android:textSize="16dp" />

            <HorizontalScrollView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollIndicators="none"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="24dp"
                        android:layout_height="match_parent" />

                    <!--
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </android.support.v7.widget.RecyclerView>
                    -->

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:id="@+id/ll_fasilitas"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/cat_fasilitas" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />

                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:textSize="12.5dp"
                            android:maxLines="2"
                            android:id="@+id/tv_fasilitas"
                            android:lineSpacingExtra="4dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/fasilitas" />

                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:id="@+id/btn_bangunan"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_icon"
                            android:layout_width="80dp"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/cat_bangunan" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />
                        <com.pixplicity.fontview.FontAppCompatTextView
                            android:id="@+id/tv_bangun"
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:textSize="12.5dp"
                            android:maxLines="2"
                            android:lineSpacingExtra="4dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/bangunan" />

                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:id="@+id/ll_jalan"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/cat_jalan" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />
                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:textSize="12.5dp"
                            android:maxLines="2"
                            android:id="@+id/tv_jalan"
                            android:lineSpacingExtra="4dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/jalanan" />

                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_gravity="center"
                            android:layout_height="80dp"
                            android:layout_marginTop="8dp"
                            android:src="@drawable/cat_parkir" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="16dp" />
                        <com.pixplicity.fontview.FontAppCompatTextView
                            style="@style/FontTextViewStyle"
                            android:layout_width="wrap_content"
                            android:textSize="12.5dp"
                            android:maxLines="2"
                            android:lineSpacingExtra="4dp"
                            android:textStyle="bold"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="Lahan Parkir" />

                    </LinearLayout>

                    <Space
                        android:layout_width="24dp"
                        android:layout_height="match_parent" />


                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>